--- a/password.css
+++ b/password.css
@@ -49,10 +49,24 @@ main .heading span:hover {
     display: flex;
 }
 
+.password-generator {
+    width: 15em;
+    height: 500px;
+    /* background: rgba(255, 255, 255, 0.1); */
+    padding: 20px 30px;
+    margin-left: 8em;
+    border: 1px rgb(255, 255, 255);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+
 .password {
     position: relative;
     width: 15em;
-    height: 4em;
+    height: 6em;
     padding: 10px 15px;
     color: #fff;
     background: #75645e;
@@ -68,7 +82,7 @@ main .heading span:hover {
 .password::before {
     content: attr(data-text);
     position: absolute;
-    top: calc(1.5rem + 5px);
+    top: calc(3rem + 5px);
     left: 1.5em;
     opacity: 0.5;
 }
@@ -84,25 +98,15 @@ main .heading span:hover {
     border: 2px solid #fff;
 }
 
-.password-generator {
-    width: 15em;
-    /* background: rgba(255, 255, 255, 0.1); */
-    padding: 20px 30px;
-    margin-left: 8em;
-    border: 1px rgb(255, 255, 255);
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1em;
-}
-
 .password-generator h1 {
     width: max-content;
     position: relative;
+    top: 3em;
+    right: 90%;
     color: #c3936d;
     font-size: 1.5em;
     margin-bottom: 20px;
+    transform: rotate(-90deg) scale(1.5);
 }
 
 .password-generator h1::before {
@@ -122,7 +126,7 @@ main .heading span:hover {
 
 .outer-container {
     position: fixed;
-    bottom: 3em;
+    top: 250px;
 }
 
 .container .input-box {
@@ -162,13 +166,17 @@ input::-webkit-outer-spin-button {
 
 .options {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .options .box {
+    position: relative;
+    left: 1.5em;
+    top: .5em;
     width: max-content;
-    padding: 0 10px;
-    margin-left: 40px;
-    margin-top: 5px;
+    /* padding: 0 10px; */
     display: flex;
     align-items: center;
     gap: 5px;
@@ -176,13 +184,13 @@ input::-webkit-outer-spin-button {
 }
 
 .options div label {
-    /* margin-top: 5px; */
     margin-left: 10px;
     cursor: pointer;
+    z-index: -1;
 }
 
 .options input {
-    appearance: none;
+    display: none;
 }
 
 .options .custom-checkbox {
@@ -193,6 +201,7 @@ input::-webkit-outer-spin-button {
     aspect-ratio: 1/1;
     background: #fff;
     border-radius: 5px;
+    z-index: -1;
 }
 
 .options .active {
@@ -309,3 +318,15 @@ input::-webkit-outer-spin-button {
 .bubble-area .c2 {
     transform: scale(.5);
 }
+
+@media screen and (min-width:1200px) {}
+
+@media screen and (max-width:991px) {}
+
+@media screen and (max-width:768px) {}
+
+@media screen and (max-width:520px) {}
+
+@media screen and (max-width:462px) {}
+
+@media screen and (max-width:400px) {}
