--- a/password.css
+++ b/password.css
@@ -30,7 +30,7 @@ main .heading {
     left: 2em;
 }
 
-main .heading span {
+main>.heading span {
     background: #c3936d;
     padding: 0 20px;
     border-radius: 2em;
@@ -38,78 +38,34 @@ main .heading span {
     transition: color, background .5s ease-in-out;
 }
 
-main .heading span:hover {
+main>.heading span:hover {
     color: #c3936d;
     background: #fff;
 }
 
 .wrapper {
     position: relative;
-    top: 3em;
+    top: 2em;
+    right: 2em;
     display: flex;
 }
 
-.password-generator {
-    width: 15em;
-    height: 500px;
-    /* background: rgba(255, 255, 255, 0.1); */
-    padding: 20px 30px;
-    margin-left: 8em;
-    border: 1px rgb(255, 255, 255);
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1em;
-}
-
-.password {
+.left {
     position: relative;
-    width: 15em;
-    height: 6em;
-    padding: 10px 15px;
-    color: #fff;
-    background: #75645e;
-    border: 2px solid #969696;
-    border-radius: 10px;
-    display: none;
-    line-break: anywhere;
-    align-items: center;
-    cursor: pointer;
-    z-index: 1;
-}
-
-.password::before {
-    content: attr(data-text);
-    position: absolute;
-    top: calc(3rem + 5px);
-    left: 1.5em;
-    opacity: 0.5;
-}
-
-.show {
     display: flex;
+    align-items: center;
 }
 
-.password i {
-    margin-left: 10px;
-    padding: 5px;
-    border-radius: 5px;
-    border: 2px solid #fff;
-}
 
-.password-generator h1 {
+.left h1 {
     width: max-content;
     position: relative;
-    top: 3em;
-    right: 90%;
     color: #c3936d;
     font-size: 1.5em;
-    margin-bottom: 20px;
     transform: rotate(-90deg) scale(1.5);
 }
 
-.password-generator h1::before {
+.left h1::before {
     content: '';
     position: absolute;
     bottom: 0;
@@ -120,13 +76,80 @@ main .heading span:hover {
     border-radius: 10px;
 }
 
-.password-generator h1 span {
+.left h1 span {
     font-size: 1.3em;
 }
 
-.outer-container {
-    position: fixed;
-    top: 250px;
+.password-generator {
+    position: relative;
+    left: 0;
+    width: 15em;
+    height: 500px;
+    padding: 20px 30px;
+    border: 1px rgb(255, 255, 255);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    gap: 1em;
+}
+
+.password {
+    position: relative;
+    min-height: 2em;
+    width: 15em;
+    max-height: 6em;
+    padding: 5px 15px;
+    margin: 5px 0;
+    color: #fff;
+    background: #75645e;
+    border: 3px solid transparent;
+    border-radius: 10px;
+    line-break: anywhere;
+    line-height: 1.4;
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 10;
+    animation: border-flicker 4s linear infinite;
+}
+
+@keyframes border-flicker {
+    0% {
+        border-color: #000;
+    }
+
+    12% {
+        border-color: #75645e;
+    }
+
+    25% {
+        border-color: #c3936d;
+    }
+
+    37% {
+        border-color: #fff;
+    }
+
+    50% {
+        border-color: #fff;
+    }
+
+    62% {
+        border-color: #c3936d;
+    }
+
+    75% {
+        border-color: #75645e;
+    }
+
+    100% {
+        border-color: #000;
+    }
+}
+
+.password p {
+    flex-grow: 1;
 }
 
 .container .input-box {
@@ -222,7 +245,7 @@ input::-webkit-outer-spin-button {
 }
 
 .options .active~label {
-    color: green;
+    color: #02a402;
 }
 
 .password-generator button {
